Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119753

QSqlRecord access causes hang/memory leak and crash using QODBC driver

    XMLWordPrintable

Details

    • Windows
    • df76edb9f (dev), e7c740280 (6.8), 47efe630b (6.7)

    Description

      I'm attempting to connect to a SQLBase database on Windows using its ODBC driver. I've verified that the driver works using Python (via pyodbc), as well as in C++ using odbc-cpp-wrapper (linked into my Qt application).

      When executing a SELECT statement using QSqlQuery, I'm able to parse the results if there number of records is very low (<30 or so). However, if the number of records is greater than this number, the application hangs, and memory consumption (monitored via the Windows Task Manager) increases gradually until the application crashes and the following error is thrown:

      terminate called after throwing an instance of 'std::bad_alloc'
       what(): std::bad_alloc
      

      See this link to the forum for more details including the Python and odbc-cpp-wrapper verification code, and the offending Qt code.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            jars121 James Ross-Smith
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change